srml/support/test/tests/ui/invalid_module_details_keyword.stderr
error: Expected `default` or module export name (e.g. Call, Event, etc.)
 --> $DIR/invalid_module_details_keyword.rs:9:20
  |
9 |         system: System::{enum},
  |                          ^^^^
